# koai

./: CMakeLists.txt  Dockerfile  README.md  configure  configure.sh  main.cpp
app/: koai.cpp  koai.hpp
assets/: c.pem  key.pem
controllers/: controller_configurer.hpp  database_controller.cpp  database_controller.hpp  database_ctl_modes.hpp  ufc_db_ctl_conf.hpp
database/: authenticator.cpp  authenticator.hpp  cassandra.cpp  cassandra.hpp  database_titles.hpp
database/conf/: cassandra.yaml
gui/: web_server.cpp  web_server.hpp
loggers/: koai_logger.cpp  koai_logger.hpp  logger_modes.hpp
managers/: data_provider_manager.cpp  data_provider_manager.hpp  database_manager.hpp
predicter/: athlete_info.cpp  athlete_info.hpp  predict_result.hpp  predict_strategy.hpp  strategy_types.hpp  ufc_predicter.cpp  ufc_predicter.hpp
predicter/strategies/: default_strategy.cpp  default_strategy.hpp  fight_calc.cpp  fight_calc.hpp  striking_biased.cpp  striking_biased.hpp  wrestling_biased.cpp  wrestling_biased.hpp
requests/: http_client.cpp  http_client.hpp
scraper/: athlete_scraper.cpp  athlete_scraper.hpp  html_scraper.cpp  html_scraper.hpp  ufc_scraper.cpp  ufc_scraper.hpp  ufc_search.cpp  ufc_search.hpp
static/: koai.js  legal.css  styles.css  themes.js
templates/: about.html  contact.html  index.html  privacy-policy.html  terms.html
utils/: json_search.cpp  json_search.hpp  rate_limiter.cpp  rate_limiter.hpp  record_processor.hpp  regex_search.cpp  regex_search.hpp  screen_cleaner.cpp  screen_cleaner.hpp  ufc_endpoint_builder.cpp  ufc_endpoint_builder.hpp  yext_reader.cpp  yext_reader.hpp
utils/disk/: disk_info.cpp  disk_info.hpp
utils/query_builder/: cass_query_builder.cpp  cass_query_builder.hpp  (+1 more)
(+3 files in other folders)
